# tongjiagent2api

./: .dockerignore  .gitignore  Dockerfile  README.en.md  README.md  compose.yaml  config.yaml  main_mock.py  pyproject.toml  start.bat  start.sh  test_file_upload.py  test_image_recognition.py
.github/workflows/: docker-image.yml
core/: README.md  app.py  constants.py  usage.py
core/api/: auth.py  chat_handler.py  config_routes.py  conv_parser.py  file_store.py  openai_routes.py  protocol_routes.py  schemas.py  tagged_output.py  tool_arguments.py
core/config/: repository.py  settings.py
core/plugin/: base.py  errors.py  helpers.py  tongji.py
core/protocol/: anthropic.py  images.py  openai.py  schemas.py  service.py
core/runtime/: browser_manager.py  session_cache.py
core/static/: config.html  login.html
docker/: config.container.yaml
docs/: config.md  cursor-thinking-format.md  openai-function-calling.md  page-pool-scheme.md
docs/request_samples/: all_api_curl_tests.sh  claude_web_stream.txt  curl_chat_with_tools.sh  cursor_request_params.json  web_request_params.json
tests/: test_admin_initialization.py  test_chat_handler_attachments.py  test_chromium_resolution.py  test_openai_responses_routes.py  test_protocol_route_helper.py  test_protocol_tool_history.py  test_session_cache.py  test_tagged_protocol_adapters.py  test_tongji_plugin.py  test_usage.py
